frontend/test/should_fail/index_edge_missing_where_index_expected2.grg
rule i {
	if{ edgesFromIndex(1 + 1).size() > 0; }
	
	modify {
	}
}
